<resources>
    <string name="app_name">GoogleCertificationKotlin</string>
    <string name="seconds">%1$d s</string>
    <string name="required_network_type">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="not_set">Not set</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="job_service">Job Service</string>
    <string name="job_running">Your Job ran to completion!</string>
    <string name="job_service_notification">Job Service notification</string>
    <string name="notification_channel_description">Notifications from Job Service</string>
    <string name="job_scheduled">Job Scheduled, will run when the constraints are met</string>
    <string name="no_constraint_toast">Please set at least one constraint</string>
    <string name="jobs_canceled">Jobs Canceled</string>
    <string name="blur_title">Select Blur Amount</string>
    <string name="select_image">Select Image</string>
    <string name="go">Go</string>
    <string name="see_file">See File</string>
    <string name="description_image">The image to blur and save.</string>
    <string name="blur_lv_1">A little blurred</string>
    <string name="blur_lv_2">More blurred</string>
    <string name="blur_lv_3">The most blurred</string>
    <string name="cancel_work">Cancel Work</string>
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.</string>
    <string name="title_activity_room_words_sample">RoomWordsSampleActivity</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="type_operand_one_hint">Type Operand 1</string>
    <string name="type_operand_two_hint">Type Operand 2</string>
    <string name="add_operation_text">Add</string>
    <string name="sub_operation_text">Sub</string>
    <string name="div_operation_text">Div</string>
    <string name="mul_operation_text">Mul</string>
    <string name="computationError">Error</string>
    <string name="engine">Engine</string>
    <string name="car">Car</string>
    <string name="app_component">AppComponent</string>
    <string name="context">Context</string>
    <string name="login_component">Login Component</string>
    <string name="login_component_factory">Login Component Factory</string>
    <string name="login_module">LoginModule</string>
    <string name="login_repository">LoginRepositoryModule</string>
    <string name="login_view_model">LoginViewModelModule</string>
    <string name="login_data_source">LoginDataSourceModule</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate
        wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream
        sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="change_dessert">Change dessert</string>
    <string name="order_label_text">Order:</string>
    <string name="note_label_text">Note:</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label_string">Phone</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger
        service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="tab_label1">Tab1</string>
    <string name="tab_label2">Tab2</string>
    <string name="tab_label3">Tab3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_app_title">My App</string>
    <string name="hello_world">Hello World!</string>
    <string name="import_camera">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="chose_camera">You chose Camera Import.</string>
    <string name="chose_gallery">You chose the Gallery.</string>
    <string name="chose_slideshow">You chose the Slideshow.</string>
    <string name="chose_tools">You chose Tools.</string>
    <string name="chose_share">You chose Share.</string>
    <string name="chose_send">You chose Send.</string>
    <string name="add_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">Todo</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your task here.</string>
    <string name="empty_task_message">Tasks cannot be empty</string>
    <string name="successfully_saved_task_message">Task saved</string>
    <string name="list_title">Task List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks: %.1f%%</string>
    <string name="statistics_completed_tasks">Completed tasks: %.1f%%</string>
    <string name="statistics_error">Error loading statistics.</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>
    <string-array name="list_tasks_array">
        <item>@string/nav_all</item>
        <item>@string/nav_active</item>
        <item>@string/nav_completed</item>
    </string-array>
    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All Tasks</string>
    <string name="label_active">Active Tasks</string>
    <string name="label_completed">Completed Tasks</string>
    <string name="no_tasks_all">You have no tasks!</string>
    <string name="no_tasks_active">You have no active tasks!</string>
    <string name="no_tasks_completed">You have no completed tasks!</string>
    <string name="refresh">Refresh</string>
    <string name="successfully_deleted_task_message">Task was deleted</string>
    <string name="successfully_added_task_message">Task added</string>
    <string name="no_data_description" />
    <string name="tasks_header_image_content_description">Tasks header image</string>
    <string name="no_tasks_image_content_description">No tasks image</string>
    <string name="prompt_email">Email vazio</string>
    <string name="prompt_password">Digite o password</string>
    <string name="action_sign_in_short">Faca o login</string>
    <string name="action_sign_in">Login</string>
    <string name="fake_implement">Fake implement</string>
    <string name="espresso_dagger_works">Fake implements works!</string>
    <string name="phonenumber_label">Phone number label</string>
    <string name="nothing_entered">Nothing entenred</string>
    <string name="hint_phonenumber">Hint ponhenumber</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="notification_title">You\'ve been notified!</string>
    <string name="notification_text">This is your notification text.</string>
    <string name="update">Update Notification</string>
    <string name="notify_me">Notify Me!</string>
    <string name="update_me">Update Me!</string>
    <string name="cancel_me">Cancel Me!</string>
    <string name="notification_updated">Notification Updated!</string>
    <string name="notification_channel_name">Mascot Notification</string>
    <string name="blue_button">Blue</string>
    <string name="green_button">Green</string>
    <string name="red_button">Red</string>
    <string name="black_button">Black</string>
    <string name="default_count">0</string>
    <string name="count_button">Count</string>
    <string name="reset_button">Reset</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_button_next">Next</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="shr_error_password">Password must contain at least 8 characters.</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
    <string name="shr_logo_content_description">Shrine Logo</string>
    <string name="menu_filter_by_grow_zone" translation_description="The label for the menu item to filter the displayed plants by grow zone.">Filter by grow zone</string>
    <string name="a11y_plant_item_image">Accessibility text for each of the plant images shown in the \'My garden\' and \'Plant list\' screens.</string>
</resources>