<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".extra_code_lab_injection.step1.CarInjectNativeActivity">


    <TextView
        android:id="@+id/text1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/app_component"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/context"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/login_component_factory"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_arrow_upward_black_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1"/>

    <View
        android:id="@+id/line1"
        android:layout_width="3dp"
        android:layout_height="50dp"
        android:background="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/login_component"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1"
        />

</androidx.constraintlayout.widget.ConstraintLayout>